# med-image-lesion-sizing-toolkit

./: CMakeLists.txt  CTestConfig.cmake  LICENSE  README.rst  appveyor.yml  itk-module.cmake  pyproject.toml
.circleci/: config.yml
Data/Input/: FDA_A_01_001_Seeds.txt  (+233 more)
Examples/: CMakeLists.txt  LesionSegmentation.cxx  LesionSegmentationCLI.h  dirent_win.h  itkLesionSegmentationCommandLineProgressReporter.cxx  itkLesionSegmentationCommandLineProgressReporter.h
include/: itkBinaryThresholdFeatureGenerator.h  itkBinaryThresholdFeatureGenerator.hxx  itkCannyEdgeDetectionRecursiveGaussianImageFilter.h  itkCannyEdgeDetectionRecursiveGaussianImageFilter.hxx  itkCannyEdgesDistanceAdvectionFieldFeatureGenerator.h  itkCannyEdgesDistanceAdvectionFieldFeatureGenerator.hxx  itkCannyEdgesDistanceFeatureGenerator.h  itkCannyEdgesDistanceFeatureGenerator.hxx  itkCannyEdgesFeatureGenerator.h  itkCannyEdgesFeatureGenerator.hxx  itkConfidenceConnectedSegmentationModule.h  itkConfidenceConnectedSegmentationModule.hxx  itkConnectedThresholdSegmentationModule.h  itkConnectedThresholdSegmentationModule.hxx  itkDescoteauxSheetnessFeatureGenerator.h  itkDescoteauxSheetnessFeatureGenerator.hxx  itkDescoteauxSheetnessImageFilter.h  itkFastMarchingAndGeodesicActiveContourLevelSetSegmentationModule.h  itkFastMarchingAndGeodesicActiveContourLevelSetSegmentationModule.hxx  itkFastMarchingAndShapeDetectionLevelSetSegmentationModule.h  itkFastMarchingAndShapeDetectionLevelSetSegmentationModule.hxx  itkFastMarchingSegmentationModule.h  itkFastMarchingSegmentationModule.hxx  itkFeatureAggregator.h  itkFeatureAggregator.hxx  itkFeatureGenerator.h  itkFeatureGenerator.hxx  itkFrangiTubularnessFeatureGenerator.h  itkFrangiTubularnessFeatureGenerator.hxx  itkFrangiTubularnessImageFilter.h  itkGeodesicActiveContourLevelSetSegmentationModule.h  itkGeodesicActiveContourLevelSetSegmentationModule.hxx  itkGradientMagnitudeSigmoidFeatureGenerator.h  itkGradientMagnitudeSigmoidFeatureGenerator.hxx  itkGrayscaleImageSegmentationVolumeEstimator.h  itkGrayscaleImageSegmentationVolumeEstimator.hxx  itkIsotropicResampler.h  itkIsotropicResampler.hxx  itkIsotropicResamplerImageFilter.h  itkIsotropicResamplerImageFilter.hxx  (+43 more)
src/: CMakeLists.txt  itkCannyEdgeDetectionImageFilter1.cxx  itkCannyEdgeDetectionImageFilter2.cxx  itkDicomSeriesReadImageWrite.cxx  itkGradientMagnitudeImageFilter.cxx  itkGradientMagnitudeRecursiveGaussianImageFilter.cxx  itkImageReadRegionOfInterestAroundSeedWrite.cxx  itkImageReadRegionOfInterestWrite.cxx  itkImageReadWrite.cxx  itkIncludeRequiredIOFactories.h  itkLaplacianRecursiveGaussianImageFilter.cxx  itkResampleVolumeToBeIsotropic.cxx
test/: CMakeLists.txt  CollectionTestMacro.cmake  CornellCollectionTests.cmake  FDAPhantomCollectionTests.cmake  LandmarkSpatialObjectWriterTest.cxx  NISTPhantomCollectionTests.cmake  ParseArgumentsMacro.cmake  VOLCANOCollectionTestMacro.cmake  VOLCANOCollectionTests.cmake  itkBinaryThresholdFeatureGeneratorTest1.cxx  itkCannyEdgesDistanceAdvectionFieldFeatureGeneratorTest1.cxx  itkCannyEdgesDistanceFeatureGeneratorTest1.cxx  itkCannyEdgesFeatureGeneratorTest1.cxx  itkConfidenceConnectedSegmentationModuleTest1.cxx  itkConnectedThresholdSegmentationModuleTest1.cxx  itkDescoteauxSheetnessFeatureGeneratorMultiScaleTest1.cxx  itkDescoteauxSheetnessFeatureGeneratorTest1.cxx  itkDescoteauxSheetnessImageFilterTest1.cxx  itkDescoteauxSheetnessImageFilterTest2.cxx  itkFastMarchingSegmentationModuleTest1.cxx  itkFeatureAggregatorTest1.cxx  itkFeatureGeneratorTest1.cxx  itkFrangiTubularnessFeatureGeneratorTest1.cxx  itkGeodesicActiveContourLevelSetSegmentationModuleTest1.cxx  itkGradientMagnitudeSigmoidFeatureGeneratorTest1.cxx  itkGrayscaleImageSegmentationVolumeEstimatorTest1.cxx  itkGrayscaleImageSegmentationVolumeEstimatorTest2.cxx  itkIsotropicResamplerTest1.cxx  itkLandmarksReaderTest1.cxx  itkLesionSegmentationMethodTest1.cxx  itkLesionSegmentationMethodTest10.cxx  itkLesionSegmentationMethodTest2.cxx  itkLesionSegmentationMethodTest3.cxx  itkLesionSegmentationMethodTest4.cxx  itkLesionSegmentationMethodTest5.cxx  itkLesionSegmentationMethodTest6.cxx  itkLesionSegmentationMethodTest7.cxx  itkLesionSegmentationMethodTest8.cxx  itkLesionSegmentationMethodTest8b.cxx  itkLesionSegmentationMethodTest9.cxx  (+23 more)
wrapping/: CMakeLists.txt  itkCannyEdgeDetectionRecursiveGaussianImageFilter.wrap  itkConfidenceConnectedSegmentationModule.wrap  itkFastMarchingSegmentationModule.wrap  itkFeatureAggregator.wrap  itkGrayscaleImageSegmentationVolumeEstimator.wrap  itkLesionSegmentationMethod.wrap  itkLocalStructureImageFilter.wrap  itkMaximumFeatureAggregator.wrap  itkRegionCompetitionImageFilter.wrap  itkSatoLocalStructureFeatureGenerator.wrap  itkSatoVesselnessSigmoidFeatureGenerator.wrap  itkSinglePhaseLevelSetSegmentationModule.wrap
(+26 files in other folders)
